# HaltingProblem

./: .gitignore  academic_report.md  best_halting_model.pth  generate_dataset.py  job.sbatch  main.py  pyproject.toml  requirements.txt  test_graph_pipeline.py  train.py
runs/halting_poc/: events.out.tfevents.1781859202.MacbookPro.64341.0  events.out.tfevents.1781859638.MacbookPro.64601.0
src/: __init__.py  dataset.py  inference.py  interpreter.py  model.py  train.py
src/graph/: encoder.py  graph_model.py  llvm_parser.py
test/: halt50.txt  loop.txt
