[project]
name = "haltingproblem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.1",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.27.1",
    "torch-geometric>=2.8.0",
]
